fix button text align issue on iphone

--- a/build_a_drum_machine/src/scss/_drum-pad.scss
+++ b/build_a_drum_machine/src/scss/_drum-pad.scss
@@ -6,6 +6,9 @@
 }
 
 .drum-pad {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: $pad-size;
   height: $pad-size;
   margin: $pad-margin;
